--- a/WpfApp1/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/WpfApp1/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="400" ResizeMode="NoResize">
+        Title="MainWindow" Height="450" Width="400" ResizeMode="NoResize" Icon="image/icon.png">
     <Grid Background="#FFFDFAF1" ShowGridLines="False" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -14,36 +14,36 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" DockPanel.Dock="Top" FontSize="26" TextAlignment="Center">Список дел</TextBlock>
+        <TextBlock Grid.Row="0" DockPanel.Dock="Top" FontSize="26" TextAlignment="Left" Margin="10">Список дел</TextBlock>
         <DataGrid Grid.Row="1" Background="#FDF5DF" Margin="10" HorizontalAlignment="Stretch" Name="DataGridProduct"
-                  AutoGenerateColumns="False" HeadersVisibility="None">
+                  AutoGenerateColumns="False" HeadersVisibility="None" ItemsSource="{Binding}">
             <DataGrid.Columns>
-                        <DataGridCheckBoxColumn />
-                        <DataGridTextColumn Header="" Binding="{Binding Path=Title}"></DataGridTextColumn>
-                        <DataGridTextColumn Binding="{Binding Path=DueDate, StringFormat=dd.MM.yyyy}"></DataGridTextColumn>
-
+            <DataGridCheckBoxColumn />
+                <DataGridTextColumn Width="2*"  Binding="{Binding Path=Title}"></DataGridTextColumn>
+                <DataGridTextColumn Width="1*" Binding="{Binding Path=DueDate, StringFormat=dd.MM.yyyy}"></DataGridTextColumn>
+            <DataGridTemplateColumn>
+                <DataGridTemplateColumn.CellTemplate>
+                    <DataTemplate>
+                            <Button Click="Button_Click" Background="#5EBEC4">
+                                <Image Source="Image/Delete.png" Width="10pt" Height="10pt" />
+                            </Button>
+                        </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+            </DataGridTemplateColumn>                
             </DataGrid.Columns>
-            
+
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Path= Description}"/>
                 </DataTemplate>
             </DataGrid.RowDetailsTemplate>
-            
-            <DataGridTemplateColumn>
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <Button Click="Button_Click"/>
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-            
         </DataGrid>
 
-        <Button Grid.Row="2" Grid.Column="1" Margin="5" Background="#5EBEC4" MinHeight="30" MaxWidth="150" VerticalAlignment="Center"
-                Name="buttonAdd" ToolTip="При добавлении дела появится в списке слева, и его придется выполнить" Click="buttonAdd_Click"> Добавить дело</Button>
+        <Button Grid.Row="0" HorizontalAlignment="Right" Grid.Column="1" Margin="5" Background="#5EBEC4" MinHeight="30" MaxWidth="150" VerticalAlignment="Center"
+                Name="buttonAdd" ToolTip="При добавлении дела появится в списке слева, и его придется выполнить" Click="buttonAdd_Click" >
+            <Image Source="image/add.png" Height="20pt" Width="20pt"/>
+        </Button>
     </Grid>
 </Window>
